src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dhF500.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    default-window-height { fixed 500; }\n}"
expression: snapshot
---
initial configure:
size: 1264 × 704, bounds: 800 × 600, states: []

post-map configures:
size: 1264 × 704, bounds: 1264 × 704, states: [Activated]
